Fix toc on mobile and animation scroll top

--- a/styles/_buttons.css
+++ b/styles/_buttons.css
@@ -396,6 +396,7 @@ Floating Button
 */
 .floating-btn--container {
   @apply fixed bottom-4 right-4 2xl:bottom-8;
+  z-index: 1000; 
 }
 
 .floating-btn {
